--- a/doc/manual/references/references.bib
+++ b/doc/manual/references/references.bib
@@ -2,12 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jhonatan Oliveira at 2015-06-07 14:38:13 -0600 
+%% Created for André Evaristo dos Santos at 2015-06-07 23:22:19 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@url{agrum,
+	Author = {Jean-Philippe Lang},
+	Date-Added = {2015-06-08 05:17:35 +0000},
+	Date-Modified = {2015-06-08 05:21:20 +0000},
+	Lastchecked = {June 5th, 2015},
+	Title = {LIP6 Projects},
+	Url = {https://forge.lip6.fr/},
+	Urldate = {June 5th, 2015},
+	Year = {2014}}
 
 @inproceedings{geigerVermaPearl89,
 	Author = {D. Geiger and T. S. Verma and J. Pearl},
