Lots of changes

--- a/doc/full_manual/full_manual.tex
+++ b/doc/full_manual/full_manual.tex
@@ -176,9 +176,10 @@ Jhonatan de Souza Oliveira
 \pagestyle{maincontentstyle} 	% fancy header and footer
 
 \input{content/chapter-introduction} % INCLUDE: introduction
-\input{content/chapter-related-work} % INCLUDE: related work
-\input{content/chapter-system}	% INCLUDE: system
-\input{content/chapter-concepts} % INCLUDE: concepts
+\input{content/chapter-background} % INCLUDE: related work
+\input{content/chapter-darwin}	% INCLUDE: system
+\input{content/chapter-dns} % INCLUDE: concepts
+\input{content/chapter-applications} % INCLUDE: concepts
 \input{content/chapter-conclusion} % INCLUDE: conclusion
 \cleardoublepage
 
@@ -199,7 +200,7 @@ Jhonatan de Souza Oliveira
 %\cleardoublepage
 
 \bibliographystyle{splncs03}
-\bibliography{references/references}
+\bibliography{references}
 
 
 %\listoffigures
