changing section folder name

--- a/doc/full_manual/full_manual.tex
+++ b/doc/full_manual/full_manual.tex
@@ -154,11 +154,11 @@ Jhonatan de Souza Oliveira
 % --------------------------
 \pagenumbering{roman}			% roman page numbing (invisible for empty page style)
 \pagestyle{empty}				% no header or footers
-\input{content/titlepages}		% INCLUDE: all titlepages
+\input{section/titlepages}		% INCLUDE: all titlepages
 \cleardoublepage
 
 \pagestyle{plain}				% display just page numbers
-\input{content/abstract}		% INCLUDE: the abstracts (english and german)
+\input{section/abstract}		% INCLUDE: the abstracts (english and german)
 \cleardoublepage
 %
 %\input{content/acknowledgement} % INCLUDE: acknowledgement
@@ -175,12 +175,12 @@ Jhonatan de Souza Oliveira
 \setcounter{page}{1}			% set page counter
 \pagestyle{maincontentstyle} 	% fancy header and footer
 
-\input{content/chapter-introduction} % INCLUDE: introduction
-\input{content/chapter-background} % INCLUDE: related work
-\input{content/chapter-darwin}	% INCLUDE: system
-\input{content/chapter-dns} % INCLUDE: concepts
-\input{content/chapter-applications} % INCLUDE: concepts
-\input{content/chapter-conclusion} % INCLUDE: conclusion
+\input{section/chapter-introduction} % INCLUDE: introduction
+\input{section/chapter-background} % INCLUDE: related work
+\input{section/chapter-darwin}	% INCLUDE: system
+\input{section/chapter-dns} % INCLUDE: concepts
+\input{section/chapter-applications} % INCLUDE: concepts
+\input{section/chapter-conclusion} % INCLUDE: conclusion
 \cleardoublepage
 
 % --------------------------
