references, abstract and partial introduction

--- a/doc/full_manual/references.bib
+++ b/doc/full_manual/references.bib
@@ -7,6 +7,31 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@Article{PER-GRA:2007,
+  Author    = {P\'erez, Fernando and Granger, Brian E.},
+  Title     = {{IP}ython: a System for Interactive Scientific Computing},
+  Journal   = {Computing in Science and Engineering},
+  Volume    = {9},
+  Number    = {3},
+  Pages     = {21--29},
+  month     = may,
+  year      = 2007,
+  url       = "http://ipython.org",
+  ISSN      = "1521-9615",
+  doi       = {10.1109/MCSE.2007.53},
+  publisher = {IEEE Computer Society},
+}
+
+@article{kolawa2007automated,
+  title={Automated Defect Prevention: Best Practices in Software Management},
+  author={Kolawa, Adam and Huizinga, Dorota},
+  journal={Wiley-IEEE Computer Society Press},
+  volume={41},
+  pages={86},
+  year={2007}
+}
+
+
 @article{kjaerulff1990triangulation,
   title={Triangulation of graphs--algorithms giving small total state space},
   author={Kj{\ae}rulff, Uffe},
