--- a/doc/full_manual/section/abstract.tex
+++ b/doc/full_manual/section/abstract.tex
@@ -6,6 +6,8 @@
 \vspace*{-10mm}
 
 We propose a programming library for Darwinian networks (DNs).
-The library covers adaptation and evolution in DNs, for modelling a problem domain and inference on the model, respectively.
-The implementation uses C++, expanding over a well established BN library called aGrUM.
-Furthermore, a wrapper in Python is created over the C++ library, in order to facilitate the development of DN systems with a scripting language.
+The library covers adaptation and evolution in DNs, for modeling a problem domain and inference on the model, respectively.
+The implementation uses Python, expanding over a simple constructed BN library called Darwin.
+Furthermore, in order to facilitate the interactive with the Darwinian Network Library, a tutorial on IPython Notebook is introduced.
+Its benefits includes interactive visual tools to compute and draw DNs ``on the fly.''
+Finally, we explore the unit test, a test automation which supports the soundness of Darwinian Network library.
