--- a/doc/full_manual/section/titlepages.tex
+++ b/doc/full_manual/section/titlepages.tex
@@ -21,14 +21,13 @@
 	\tgherosfont
 	\centering
 	
-	{\Large \thesisUniversity} \\[4mm]
+%	{\Large \thesisUniversity} \\[4mm]
 	\includegraphics[width=6cm]{img/logo_uofr_black} \\[2mm]
 	\textsf{\thesisUniversityDepartment} \\
 %	\textsf{\thesisUniversityInstitute} \\
 %	\textsf{\thesisUniversityGroup} \\
 	
 	\vfill
-	{\large \thesisSubject} \\[5mm]
 	{\LARGE \color{ctcolormain}\textbf{\thesisTitle} \\[10mm]}
 	{\Large \thesisName} \\
 	
@@ -73,7 +72,7 @@
 \small
 \textbf{\thesisName} \\
 \textit{\thesisTitle} \\
-\thesisSubject, \thesisDate \\
+\thesisDate \\
 %Reviewers: \thesisFirstReviewer\ and \thesisSecondReviewer \\
 Supervisor: \thesisFirstSupervisor\
 %and \thesisSecondSupervisor 
@@ -83,4 +82,4 @@ Supervisor: \thesisFirstSupervisor\
 %\thesisUniversityInstitute \\
 \thesisUniversityDepartment \\
 \thesisUniversityStreetAddress \\
-\thesisUniversityPostalCode\ and \thesisUniversityCity
+\thesisUniversityPostalCode \thesisUniversityCity
