Introduction + draft background

--- a/doc/full_manual/section/chapter-introduction.tex
+++ b/doc/full_manual/section/chapter-introduction.tex
@@ -3,7 +3,7 @@
 \chapter{Introduction}
 \label{sec:intro}
 
-\cleanchapterquote{You can’t do better design with a computer, but you can speed up your work enormously.}{Wim Crouwel}{(Graphic designer and typographer)}
+\cleanchapterquote{In the long history of humankind (and animal kind, too) those who learned to collaborate and improvise most effectively have prevailed.}{Charles Darwin}{}
 
 Darwinian networks (DNs) \cite{butzOliveiraSantosCai15} were proposed as a simplification of working with Bayesian networks (BNs).
 A BN is a set of \emph{conditional probability tables} (CPTs) and a \emph{direct acyclic graph} (DAG) \cite{pear88}.
@@ -47,7 +47,7 @@ The DN library will also use \emph{IPython Notebook} \cite{PER-GRA:2007} in orde
 %to finish
 In summary, this project proposes the implementation of a DN library.
 All the basic operations for adaptation and evolution in DNs will be available through the library.
-The implementation itself uses Python programming language and the basic data structures are provided by aGrUM library.
+The implementation itself uses Python programming language and the basic data structures are provided by Darwin library.
 A Python interface will be also available for rapid prototyping systems and teaching.
 The main advantage of the DN library is to apply novel ideas and techniques of DNs that were recently propose to simplify working with BNs.
 
