--- a/doc/full_manual/section/chapter-darwin.tex
+++ b/doc/full_manual/section/chapter-darwin.tex
@@ -96,14 +96,4 @@ For instance, the code above can be used to declare a BN with two nodes $a \righ
 \begin{verbatim}
     G = networkx.DiGraph()
     G.add_edge("a", "ab")
-\end{verbatim}- 
-
-%Main classes and how to use them.
-%Example:
-%
-%\begin{itemize}
-%  \item Class Potential
-%  \item Class Graph With Potential
-%  \item Class BN
-%  \item Class MN
-%\end{itemize}
+\end{verbatim}
