--- a/doc/full_manual/full_manual.tex
+++ b/doc/full_manual/full_manual.tex
@@ -113,6 +113,7 @@ Jhonatan de Souza Oliveira
 % **************************************************
 \usepackage[utf8]{inputenc}		% defines file's character encoding
 \usepackage[english]{babel} % babel system, adjust the language of the content
+\usepackage{marginnote} %margin note
 \usepackage[					% clean thesis style
 	figuresep=colon,%
 	sansserif=false,%
