--- a/doc/full_manual/section/chapter-conclusion.tex
+++ b/doc/full_manual/section/chapter-conclusion.tex
@@ -1,2 +1,43 @@
 \chapter{Conclusion}
 \label{sec:conclusion}
+
+We have suggested Darwinian Network Library as new framework for modeling and inference in DNs.
+DN library is a implementation of the basic operations for adaptation and evolution in DNs.
+It is implemented with the Python programming language and the basic data structures are provided by Darwin library.
+It provides salient features as test unity and a tutorials with IPython Notebook.
+The main advantage of the DN library is to apply novel ideas and techniques of DNs.
+DN library also is great for teaching as well for quick prototyping or testing.
+
+
+DN library is based upon the novel library Darwin, a written in Python for BN modelling and inference.
+Darwin library has two main categories called potentials and graph manipulations.
+The former is a data structure for modelling a probability table.
+The latter maps nodes in the graph to a list of potentials
+
+
+We have established in Theorem \ref{the:adap_eq_t_adap} that t-adaptation is equivalent to adaptation.
+Thus, t-adaptation will always yield the same result as adaptation, but perhaps with less computation.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+%The founder of BNs writes that perhaps d-separation had the greatest immediate impact of \cite{pearl86}. He also writes later \cite{pearl09} that many have had difficulties in understanding d-separation.
+%One of the reasons this is is because d-separation is sometimes counter-intuitive, namely, a path that necessarily traverses the conditioning set can be considered as not being blocked.
+%In this paper, we have suggested a pruning step on the DAG so that blocking works in an intuitive way.
+%
+%In addition, we have simplified m-separation, which is an equivalent method to d-separation.
+%We have explicitly demonstrated how m-separation can prune edges unnecessarily.
+%That is, classical separation will give the same result whether or not these edges are pruned.
+%Moreover, we have also shown that m-separation can unnecessarily add edges to the undirected graph.
+%Once again the addition of these edges does not affect the result of classical separation.
+%We have suggested the minimum edges that need to be added to ensure correctness.
