--- a/doc/full_manual/section/chapter-introduction.tex
+++ b/doc/full_manual/section/chapter-introduction.tex
@@ -46,7 +46,7 @@ The DN library will also use \emph{IPython Notebook} \cite{PER-GRA:2007} in orde
 
 %to finish
 In summary, this project proposes the implementation of a DN library.
-All the basic operations for adaptation and evolution in DNs will be available through the library.
+All the basic operations for adaptation and evolution in DNs is available through the library.
 The implementation itself uses Python programming language and the basic data structures are provided by Darwin library.
 A Python interface will be also available for rapid prototyping systems and teaching.
 The main advantage of the DN library is to apply novel ideas and techniques of DNs that were recently propose to simplify working with BNs.
